# pyPolyCSG

./: .gitignore  CMakeLists.txt  pyPolyCSG.cbp  pyPolyCSG.workspace
include/: pypolyhedron.h
libpolyhcsg/: CMakeLists.txt  libpolyhcsg.cbp
libpolyhcsg/include/: PolyhedronUtils.h  mesh_functions.h  mesh_io.h  polyhedron.h  polyhedron_binary_op.h  polyhedron_unary_op.h  triangulate.h
libpolyhcsg/source/: PolyhedronUtils.cpp  mesh_converter.cpp  mesh_functions.cpp  mesh_io.cpp  polyhedron.cpp  polyhedron_binary_op.cpp  polyhedron_unary_op.cpp  triangulate.cpp
libpolyhcsg/test/cornerrad/: cornerrad.cbp  main.cpp
libpolyhcsg/test/p_extrude_rotate/: main.cpp  p_extrude_rotate.cbp
source/: pypolyhedron.cpp  python_wrapper.cpp
